# morfBeacon

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.fr.md  README.md  ROADMAP.md
arduino/: morfbeacon_emitter.h
docs/en/: README.md
docs/fr/: ARCHITECTURE.md  INTEGRATION.md  PROTOCOL.md  README.md
examples/minimal/: CMakeLists.txt  main.cpp
tools/: check-protocol.py  fake_dashboard.py
